--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
   },
   "extra": {
     "yuncms": {
-      "name": "news",
-      "i18n": {
+      "id": "news",
+      "translate": {
         "class": "yii\\i18n\\PhpMessageSource",
         "sourceLanguage": "en-US",
         "basePath": "@yuncms/news/messages"
